GitVersion1/objects/ProjectTemplate_MilestoneList__c.object
<CustomObject>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_List_Library__c</fullName>
        <label>Milestone List (Library)</label>
        <referenceTo>Milestone_List_Library__c</referenceTo>
        <relationshipLabel>ProjectTemplate/MilestoneList</relationshipLabel>
        <relationshipName>ProjectTemplate_MilestoneList</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order No</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Template__c</fullName>
        <label>Project Template</label>
        <referenceTo>Project_Template__c</referenceTo>
        <relationshipLabel>ProjectTemplate/MilestoneList</relationshipLabel>
        <relationshipName>ProjectTemplate_MilestoneList</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ProjectTemplate/MilestoneList</label>
    <nameField>
        <displayFormat>PTML-{00000}</displayFormat>
        <label>ProjectTemplate/MilestoneList Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProjectTemplate/MilestoneList</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>